--- a/java/crow/CMakeLists.txt
+++ b/java/crow/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 set(SOURCE_FILES 
 	Crow.cpp
+	CrowSpamSubscriber.cpp
 )
 
 link_libraries(crowjni crow)
