--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,19 @@ __pycache__/
 # C extensions
 *.so
 
+# CMAKE
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
 # Distribution / packaging
 .Python
 env/
