--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,9 +19,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out my other repo
-       uses: actions/checkout@master
-       with:
+    - uses: actions/checkout@master
+      with:
           repository: mirmik/igris
 
     - uses: actions/checkout@v2
