--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,10 +26,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install libraries
-      run: 
-        git clone https://github.com/mirmik/igris
-        cd igris
-        cmake --install . 
+      run: |
+        git clone https://github.com/mirmik/igris \
+        cd igris \
+        cmake --install . \ 
         cd ..
 
     - name: Configure CMake
