--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,7 +31,7 @@ jobs:
         cd igris
         cmake .
         cmake --build .
-        cmake --install .
+        sudo cmake --install .
         cd ..
 
     - name: Configure CMake
