--- a/system/crowker.service
+++ b/system/crowker.service
@@ -3,7 +3,7 @@ Description=Crow brocker
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/crowker --udp 10009
+ExecStart=/usr/local/bin/crowker
 
 [Install]
 WantedBy=multi-user.target
