--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,6 +23,12 @@ jobs:
       with:
           repository: mirmik/igris
 
+    strategy:
+      matrix:
+        compiler: 
+          - { CXX: g++-11, CC: gcc-11 } 
+          - { CXX: clang++-12, CC: clang-12 }
+
     - uses: actions/checkout@v2
 
     - name: Setup dependencies
