--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ file(GLOB SOURCES
 	crow/src/*.cpp
 	crow/src/*.c
 	crow/src/variants/allocation_malloc.cpp
-	crow/src/variants/print.cpp
+	crow/src/variants/crow_print.cpp
 	crow/src/variants/warn.cpp
 	crow/src/variants/stdtime.cpp
 	crow/pubsub/*.cpp
