--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.5.1)
 project(crow)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CC_STANDARD 11)
 
 file(GLOB HEADERS 
 	crow/*.h
