--- a/.github/workflows/licant.yml
+++ b/.github/workflows/licant.yml
@@ -38,24 +38,17 @@ jobs:
       run: |
         git clone https://github.com/mirmik/igris
         cd igris
-        cmake .
-        cmake --build .
-        sudo cmake --install .
+        ./make.py
+        sudo ./make.py install
         cd ..
 
     - name: Install nos library
       run: |
         git clone https://github.com/mirmik/nos
         cd nos
-        cmake .
-        cmake --build .
-        sudo cmake --install .
+        ./make.py
+        sudo ./make.py install
         cd ..
-
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       run: python3 ./make.py
