--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,10 @@
     "streambuf": "cpp",
     "thread": "cpp",
     "cinttypes": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "csignal": "cpp",
+    "forward_list": "cpp",
+    "map": "cpp",
+    "typeindex": "cpp"
   }
 }
